--- a/style.css
+++ b/style.css
@@ -359,8 +359,7 @@ footer li:hover {
 /*MOBILE VIEW*/
 @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+  and (max-device-width: 480px) {
 
     .container {
         max-width: 100%;
